# vpp-mirror

./: .gitignore  README.md
g2/: main.c
plugins/snat-plugin/snat/: in2out.c  out2in.c
src/: Makefile.am  svm.am  uri.am  vnet.am  vppinfra.am
src/plugins/snat/: in2out.c  out2in.c
src/svm/: svm_fifo.c  svm_fifo.h  test_svm_fifo1.c
src/uri/: uri_tcp_test.c  uri_udp_test.c  uri_udp_test2.c
src/vlib/: buffer.c  buffer.h
src/vnet/: api_errno.h  buffer.h  vnet_all_api_h.h
src/vnet/ip/: ip4.h  ip4_forward.c  ip6.h  udp.h
src/vnet/lisp-cp/: packets.c  packets.h
src/vnet/session/: application.c  application.h  application_interface.c  application_interface.h  node.c  session.api  session.c  session.h  session_api.c  session_cli.c  session_interface.c  session_interface.h  transport.h
src/vnet/tcp/: tcp.c  tcp.h  tcp_error.def  tcp_input.c  tcp_newreno.c  tcp_output.c  tcp_packet.h
src/vnet/udp/: builtin_server.c  udp.c  udp.h  udp_input.c  udp_local.c
src/vnet/uri/: transport.h  uri.api  uri.c  uri.h  uri_api.c  uri_cli.c  uri_db.h  uri_queue.c  uri_udp.c  uri_udp4_node.c  uri_udp_builtin_server.c
src/vpp/api/: vpe.api
svm/: Makefile.am  ssvm.h  ssvm_fifo.c  ssvm_fifo.h  ssvm_fifo_segment.c  ssvm_fifo_segment.h  svm.h  svm_fifo.c  svm_fifo.h  svm_fifo_segment.c  svm_fifo_segment.h  test_ssvm_fifo1.c  test_svm_fifo1.c
uri/: Makefile.am  client.c  configure.ac  server1.c  uri_tcp_test.c  uri_udp_test.c  uri_udp_test2.c  uritest.c  vpp_commapi.c  vpp_commapi.h
vlib/vlib/: node.c
vnet/: Makefile.am
vnet/etc/scripts/: tcp  udp
vnet/vnet/: api_errno.h  buffer.h  vnet_all_api_h.h
vnet/vnet/ip/: ip.h  (+9 more)
vpp/vpp-api/: api.c  vpe.api
vppinfra/: Makefile.am
vppinfra/vppinfra/: bihash_16_8.h  bihash_24_8.h  mem.h  vec.c
(+31 files in other folders)
